full-moon/tests/cases/fail/parser/function-7/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/function-7
---
error[ast]: unexpected token `,`. , (expected a `)`)
  ┌─ source.lua:1:15
  │
1 │ function x(..., a)
  │               ^

error[ast]: unexpected token `,`. , (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:15
  │
1 │ function x(..., a)
  │               ^

error[ast]: unexpected token `)`. ) (unexpected expression when looking for a statement)
  ┌─ source.lua:1:18
  │
1 │ function x(..., a)
  │                  ^

error[ast]: unexpected token `)`. ) (unexpected token, this needs to be a statement)
  ┌─ source.lua:1:18
  │
1 │ function x(..., a)
  │                  ^


